styled location field and fixed scrollbar
The scroll bar used to be too big so I would not be able to see the last
element in the list so I changed the size and the location box is now
styled.

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,8 @@ body {
 }
 #form-loc {
     position: absolute;
-    top: 10px;
-    left: 350px;
+    top: 40px;
+    left: 25px;
     z-index: 9;
     overflow: hidden;
 }
@@ -45,6 +45,10 @@ h1 {
     font-family: 'Yantramanav', sans-serif;
     font-size: 1.5em;
 }
+p {
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 1.15em;
+}
 #concert-list-item {
     padding: 0;
     margin-right: 2px;
@@ -53,15 +57,18 @@ h1 {
     cursor: pointer;
     border-bottom: 1px dotted #000000;
 }
+#concert-list-item:last-child {
+    padding-bottom: 20px;
+}
 #attribution {
     height: 30px;
 }
 #list-overlay {
     padding: 5px;
     position: absolute;
-    height: 90vh;
+    height: 80vh;
     opacity: 1.0;
-    top: 40px;
+    top: 110px;
     left: 39px;
     z-index: 2;
     overflow: hidden;
@@ -89,6 +96,12 @@ h1 {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
+
+::-webkit-scrollbar-button {
+    width: 30px;
+    height: 30px;
+}
+
 @media screen and (max-width: 980px) {
     h1, h4 {
         font-size: 1em;
